--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ maiores reiciendis nesciunt sunt?</pre>
     <main>
       <h2 class="sec2-tittle">Our Featured Flowers</h2>
       <pre class="sec2-tittle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing eliy
           Veniam magni sunt nostrum ducimus sed fugit, dignissimos enim!</pre>
       <section class="image-section">
         <div class="image-div" style="background-color: #ffe1f8;">
