--- a/index.html
+++ b/index.html
@@ -18,61 +18,125 @@
         <h2>beautiful flowers</h2>
         <h2> a part of your life.</h2>
         <pre>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-Accusantium rem aspernatur, voluptates iusto animi quisquam aliquam 
-deserunt nulla similique quos sapiente atque vero accusamus numquam eius,
-maiores reiciendis nesciunt sunt?</pre>
+Flower shops are the home to many different 
+types and variety of flowers. On top of that, 
+flower shops are retailers that create unique 
+design and sell floral arrangements to individuals
+and arrange beautiful décor for large events.</pre>
         <a href=""><button class="btn">Shop Now</button></a>
       </div>
       <div class="header-img">
-        <img class="img" src="Flower Asset/pngwing 10.png" alt="">
+        <img class="img" src="Flower-Asset/pngwing 10.png" alt="">
       </div>
     </div>
+
     <main>
-      <h2 class="sec2-tittle">Our Featured Flowers</h2>
-      <pre class="sec2-tittle">
-          Lorem ipsum dolor sit amet consectetur adipisicing eliy.
-          Veniam magni sunt nostrum ducimus sed fugit, dignissimos enim!</pre>
-      <section class="image-section">
-        <div class="image-div" style="background-color: #ffe1f8;">
-          <img src="Flower Asset/pngwing 6.png" alt="Image 1">
+      <section class="Our-Featured-Flowers">
+        <h2 class="sec2-tittle">Our Featured Flowers</h2>
+        <pre class="sec2-tittle">
+Flower shops are the home to many different types and variety of flowers. 
+On top of that, flower shops are retailers that create.</pre>
+        <section class="image-section">
+          <div class="image-div" style="background-color: #ffe1f8;">
+            <img src="Flower-Asset/pngwing 6.png" alt="Image 1">
 
-        </div>
-        <div class="image-div" style="background-color: #d2ffff;">
-          <img src="Flower Asset/pngwing 6.png" alt="Image 2">
+          </div>
+          <div class="image-div" style="background-color: #d2ffff;">
+            <img src="Flower-Asset/pngwing 6.png" alt="Image 2">
 
-        </div>
-        <div class="image-div" style="background-color: #d9ffd2;">
-          <img src="Flower Asset/pngwing 6.png" alt="Image 3">
+          </div>
+          <div class="image-div" style="background-color: #d9ffd2;">
+            <img src="Flower-Asset/pngwing 6.png" alt="Image 3">
 
-        </div>
+          </div>
+        </section>
+        <section class="tittle-section">
+          <div class="tittle-div">
+            <h3>Pink Flower Tree</h3>
+          </div>
+          <div class="tittle-div">
+            <h3>Pink Flower Tree</h3>
+          </div>
+          <div class="tittle-div">
+            <h3>Pink Flower Tree</h3>
+          </div>
+        </section>
       </section>
-      <section class="tittle-section">
-        <div class="tittle-div">
-          <h3>Pink Flower Tree</h3>
-        </div>
-        <div class="tittle-div">
-          <h3>Pink Flower Tree</h3>
-        </div>
-        <div class="tittle-div">
-          <h3>Pink Flower Tree</h3>
-        </div>
-      </section>
-      <div class="header1">
-        <div class="header-para1">
+      <section class="Hot-Deal">
+        <div class="header1">
+          <div class="header-para1">
             <h2>Hot Deal ! Sale Up To <span>25% Off</span></h2>
             <pre>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-Accusantium rem aspernatur, voluptates iusto animi quisquam aliquam 
-deserunt nulla similique quos sapiente atque vero accusamus numquam eius,
-maiores reiciendis nesciunt sunt?</pre>
-<a href=""><button class="btn">Sign Up</button></a>
+Flower shops are the home to many different types and
+variety of flowers. On top of that, flower shops are 
+retailers that create unique design and sell floral
+arrangements to individuals and arrange beautiful
+décor for large events.</pre>
+            <a href=""><button class="btn">Sign Up</button></a>
+          </div>
+          <div class="header-img1">
+            <img class="img1" src="Flower-Asset/pngwing 8.png" alt="">
+          </div>
         </div>
-        <div class="header-img1">
-           <img class="img1" src="Flower Asset/pngwing 8.png" alt="">
+      </section>
+      <section class="Instagram">
+        <h2 class="sec2-tittle">Instagram</h2>
+        <pre class="sec2-tittle">
+Flower shops are the home to many different 
+types and variety of flowers.
+On top of that, flower shops are retailers 
+that create unique design and sel
+        </pre>
+        <section class="instragram">
+          <div class="instragram-div">
+            <img src="Flower-Asset/Flower 01.png" alt="Image 1">
+          </div>
+          <div class="instragram-div">
+            <img src="Flower-Asset/Rectangle 5.png" alt="Image 2">
+          </div>
+          <div class="instragram-div">
+            <img src="Flower-Asset/Rectangle 6.png" alt="Image 3">
+          </div>
+          <div class="instragram-div">
+            <img src="Flower-Asset/Rectangle 4.png" alt="Image 3">
+          </div>
+        </section>
+      </section>
+      <section class="bonus">
+        <div class="flex-container">
+          <div class="text-div">
+            <h2 class="h">New Arrived</h2>
+            <p>Discover a collection of beautiful images that inspire and captivate.</p>
+            <a href=""><button class="btn">Order Now</button></a>
+          </div>
+          <div class="bonus-div">
+            <div class="instragram1-div">
+              <img src="Flower-Asset/pngtree-transparent-watercolor-flowers-png-image_6646331.png" alt="Image 1">
+            </div>
+          </div>
         </div>
-    </div>
+      </section>
+      <section class="last">
+        <div class="last-sec">
+          <h2>Get The Latest Deals</h2>
+          <p>$30 coupon for first shopping</p>
+          <form>
+            <input type="text" placeholder="Enter your text">
+            <button class="btn1">Subscribe</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="text">
+        <h2>Flower <span>Shop</span></h2>
+        <p>It is a long established fact that a reader will be distracted by the readable</p>
+        <p>content of a page when looking at its layout.</p>
+        <p>@2020-2023, FlowerShop.com. All rights reserved.</p>
+      </div>
+     
+    </footer>
+
 </body>
 
 </html>
